[tool.poetry]
name = "gen_image_networks"
version = "0.1.0"
description = ""
authors = ["mr_geri <ilya.kamckine@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.10.2%2Bcpu-cp39-cp39-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
