[tool.poetry]
name = "gen_image_networks"
version = "0.1.0"
description = ""
authors = ["mr_geri <ilya.kamckine@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
torch = "^1.11.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
